--- a/tests/data/configs/merfish_probe_designer.yaml
+++ b/tests/data/configs/merfish_probe_designer.yaml
@@ -60,11 +60,11 @@ readout_probe_GC_content_max: 50 # maximum GC content of oligos
 readout_probe_homopolymeric_base_n: # minimum number of nucleotides to consider it a homopolymeric run per base
   G: 3
 readout_probe_set_size: 16 # total number of readout probes
-homogeneous_properties_weights: # oligo sets should have similar properties, the weighted sum of variance of the properties is minimized
-  Tm_weight: 1 # melting temperature
-  GC_weight: 1 # GC content
+readout_probe_homogeneous_properties_weights: # readout probes in one set should have similar properties, the weighted sum of variance of the properties is minimized
+  TmNN: 1 # melting temperature
+  GC_content: 1 # GC content
 n_bits: 16 # number of bits contained in each barcode
-min_hamming_distance: 4 # minimum distance between two valid barcodes
+min_hamming_dist: 4 # minimum distance between two valid barcodes
 hamming_weight: 4 # number of bits containing one in each barcode
 channels_ids: # names of fluorescent channels
   - Alexa488
@@ -129,7 +129,7 @@ target_probe_cross_hybridization_blastn_hit_parameters:
   min_alignment_length: 17 # can be turned into coverage
 # Parameters for the Oligo set selection
 max_graph_size: 5000 # maximum number of oligos that are taken into consisderation in the last step (5000 -> ~5GB, 2500 -> ~1GB)
-pre_filter: True # if true, runs a pre-filtering step to reduce the number of oligos that are taken into consideration in the oligo set selection. This step is recommended for large oligo sets with more than 30 oligos.
+pre_filter: true # if true, runs a pre-filtering step to reduce the number of oligos that are taken into consideration in the oligo set selection. This step is recommended for large oligo sets with more than 30 oligos.
 n_attempts: 100000 # number of attempts to find the optimal set of oligos
 heuristic: true # apply heuristic pre-search to reduce search space and runtime of oligo set selection
 heuristic_n_attempts: 100 # number of attempts to find the optimal set of oligos for heuristic pre-search
