--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,9 @@ on:
   push:
     branches:
       - main
-      - dev
   pull_request:
     branches:
       - main
-      - dev
   workflow_dispatch:
   workflow_call:
 
@@ -19,7 +17,7 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        os: [macos-latest, ubuntu-latest] #, ubuntu-latest, windows-latest
+        os: [ubuntu-latest] #, ubuntu-latest, windows-latest
         python-version: ["3.9", "3.10"] #"3.7", "3.8", "3.10", , "3.11"
 
     steps:
