--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,6 +59,7 @@ jobs:
 
     - name: Update conda and add channels
       run: |
+        python -m pip install --upgrade pip
         conda config --add channels bioconda
         conda config --add channels conda-forge
         conda update --all
