--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,6 +82,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
+        pip install ./packages/oligo-designer-toolsuite-ai-filters
         pip install -e .
 
     - name: Test with pytest
