--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,6 +78,13 @@ jobs:
         conda install "bowtie2>=2.5"
         conda install "bowtie>=1.3.1"
 
+    - name: Debug Install Dependencies
+      env:
+        ACTIONS_RUNNER_DEBUG: true
+      run: |
+        pip install --upgrade pip
+        pip install oligo-designer-toolsuite-ai-filters
+
     - name: Install pip dependencies
       run: |
         python -m pip install --upgrade pip
@@ -86,3 +93,4 @@ jobs:
 
     - name: Test with pytest
       run: pytest
+      
