--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       max-parallel: 12
       matrix:
         os: [ubuntu-latest] #, macos-latest, windows-latest
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9"] # "3.10", "3.11", "3.12"
         
     steps:
     - name: Checkout Repository 
@@ -77,13 +77,6 @@ jobs:
         conda install "bedtools>=2.30"
         conda install "bowtie2>=2.5"
         conda install "bowtie>=1.3.1"
-
-    - name: Debug Install Dependencies
-      env:
-        ACTIONS_RUNNER_DEBUG: true
-      run: |
-        pip install --upgrade pip
-        pip install oligo-designer-toolsuite-ai-filters
 
     - name: Install pip dependencies
       run: |
