--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,6 +77,9 @@ jobs:
         conda install "bowtie2>=2.5"
         conda install "bowtie>=1.3.1"
 
+    - name: Check permissions
+      run: ls -ld $(pwd)
+
     - name: Install pip dependencies
       run: |
         python -m pip install --upgrade pip
