--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,11 +35,6 @@ jobs:
     steps:
     - name: Checkout Repository 
       uses: actions/checkout@v3
-    
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
         
     - name: Setup Conda for Ubuntu and Mac
       if: matrix.os != 'windows-latest'
@@ -48,6 +43,7 @@ jobs:
         miniconda-version: "latest" 
         auto-update-conda: true
         python-version: ${{ matrix.python-version }}
+        activate-environment: "test-env"
 
     - name: Setup Conda for Windows
       if: matrix.os == 'windows-latest'
@@ -55,6 +51,7 @@ jobs:
       with:
         update-conda: true
         python-version: ${{ matrix.python-version }}
+        activate-environment: "test-env"
         conda-channels: anaconda, conda-forge
 
     - name: Update conda and add channels
@@ -63,20 +60,18 @@ jobs:
         conda config --add channels conda-forge
         conda update --all
 
-    - name: check python and conda version
-      run: |
-        conda --version
-        conda config --show channels
-        which python
-        python --version
     
     - name: Install conda dependencies
       run: |
-        conda install "blast>=2.15.0"
-        conda install "bedtools>=2.30"
-        conda install "bowtie>=1.3.1"
-        conda install "bowtie2>=2.5"
+        conda install -n test-env -y "blast>=2.15.0" "bedtools>=2.30" "bowtie>=1.3.1" "bowtie2>=2.5"
 
+    - name: Activate Conda Environment
+      shell: bash
+      run: |
+        source $(conda info --base)/etc/profile.d/conda.sh
+        conda activate test-env
+        conda info --envs
+    
     - name: Install pip dependencies
       run: |
         python -m pip install --upgrade pip
