--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       max-parallel: 12
       matrix:
         os: [ubuntu-latest] #, macos-latest, windows-latest
-        python-version: ["3.9", "3.10"] # "3.10", "3.11", "3.12"
+        python-version: ["3.9"] # "3.10", "3.11", "3.12"
         
     steps:
     - name: Checkout Repository 
