--- a/.github/workflows/test dependencies.yaml
+++ b/.github/workflows/test dependencies.yaml
@@ -16,6 +16,11 @@ jobs:
     steps:
     - name: Checkout Repository 
       uses: actions/checkout@v3
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
     
     - name: Setup Conda for Ubuntu and Mac
       if: matrix.os != 'windows-latest'
