--- a/.github/workflows/test_2.yaml
+++ b/.github/workflows/test_2.yaml
@@ -56,28 +56,18 @@ jobs:
         python-version: ${{ matrix.python-version }}
         conda-channels: anaconda, conda-forge, bioconda
 
-    - name: Update conda and add channels
+    - name: Update conda, add channels and install dependencies
       run: |
         conda config --add channels bioconda
         conda config --add channels conda-forge
         conda update -n base -c defaults conda
         conda update --all
-
-    - name: Install conda dependencies
-      run: |
-        conda install -y "blast>=2.15.0"
-        conda install -y "bedtools>=2.30"
-        conda install -y "bowtie>=1.3.1"
-        conda install -y "bowtie2>=2.5"
-
-    - name: Activate Conda Environment and Verify Installation
-      run: |
-        source $(conda info --base)/etc/profile.d/conda.sh
-        conda activate base
-        which blast
-        which bedtools
-        which bowtie
+        conda install "blast>=2.15.0"
+        conda install "bedtools>=2.30"
+        conda install "bowtie>=1.3.1"
+        conda install "bowtie2>=2.5"
         blastn -version
+
         
     - name: Install pip dependencies
       run: |
