--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,76 +1,63 @@
-name: test n1
+name: Test with Conda
 
-on: 
+on:
   push:
     branches: [ main ]
-    paths-ignore:
-      - 'README.md'
-      - 'pyproject.toml'
-      - 'docs/**'
-      - 'tutorials/**'
   pull_request:
     branches: [ main ]
-    paths-ignore:
-      - 'README.md'
-      - 'pyproject.toml'
-      - 'docs/**'
-      - 'tutorials/**'
-      - '.github/workflows/**'
   workflow_dispatch:
-  workflow_call:
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest] #, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10"] 
-        # Add more versions as needed: ["3.10", "3.11", "3.12"]
+        # Add "3.11", "3.12", etc. if desired
 
     steps:
-      - name: Check out repository
+      - name: Check out code
         uses: actions/checkout@v3
 
-      # 1) Setup Miniconda on all platforms
-      - name: Setup Miniconda
+      - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
           auto-activate-base: false
           activate-environment: test-env
-          python-version: ${{ matrix.python-version }}
-          # Add channels you need:
-          channels: conda-forge, bioconda, defaults
-          # Speeds installs
+          # This ensures a new environment with the correct Python is created:
+          environment-spec: python=${{ matrix.python-version }}
           use-mamba: true
+          # All channels you need:
+          channels: conda-forge, bioconda, defaults
+          channel-priority: strict
 
-      # 2) Update conda and installed packages
-      - name: Update conda
-        run: |
-          conda update -n base conda --yes
-          conda update --all --yes
+      - name: Show Python version (should be 3.10)
+        run: python --version
 
-      # 3) Install conda dependencies
+      - name: Update Conda
+        run: mamba update -n base conda --yes
+
       - name: Install conda dependencies
-        run: |
-          conda install --yes \
-            "blast>=2.15.0" \
-            "bedtools>=2.30" \
-            "bowtie>=1.3.1" \
-            "bowtie2>=2.5"
+        run: mamba install --yes \
+          "blast>=2.15.0" "bedtools>=2.30" "bowtie>=1.3.1" "bowtie2>=2.5"
+        # If any of these packages *force* Python to downgrade,
+        # conda will let you know in the solver output.
 
-      # 4) Install pip dependencies
-      - name: Install pip dependencies
+      - name: Install pip packages
         run: |
-          python --version
           python -m pip install --upgrade pip
           pip install pytest
-          # If your package is pip-installable in editable mode:
           pip install -e .
 
-      # 5) Verify environment and run tests
-      - name: Check conda environment
-        run: conda list
+      - name: Verify environment and run tests
+        run: |
+          echo "Conda environment list:"
+          conda env list
+          echo "Conda list in test-env:"
+          conda list
+          echo "Python version in test-env:"
+          python --version
 
-      - name: Test with pytest
+      - name: Run pytest
         run: pytest --disable-warnings tests/test_oligo_specificity_filter.py
