--- a/.github/workflows/test_2.yaml
+++ b/.github/workflows/test_2.yaml
@@ -73,6 +73,8 @@ jobs:
         conda install -y "bowtie>=1.3.1"
         conda install -y "bowtie2>=2.5"
         python --version
+        echo "$(conda info --base)/envs/myenv/bin" >> $GITHUB_PATH
+        which blastn
         
     - name: Install pip dependencies
       run: |
