--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,8 +75,8 @@ jobs:
         conda activate test-env
         python --version
         python -m pip install --upgrade pip
-        pip install pytest
-        pip install -e .
+        pip -m install pytest
+        pip -m install -e .
     - name: Check Conda dependencies
       run: conda list
 
