--- a/.github/workflows/test_2.yaml
+++ b/.github/workflows/test_2.yaml
@@ -66,22 +66,30 @@ jobs:
         conda activate test-env
         conda config --add channels bioconda
         conda config --add channels conda-forge
-        # conda update -n base -c defaults conda
         conda update --all
         conda install -n test-env -y "blast>=2.15.0"
         conda install -n test-env -y "bedtools>=2.30"
         conda install -n test-env -y "bowtie>=1.3.1"
         conda install -n test-env -y "bowtie2>=2.5"
-        python --version
         echo "$(conda info --base)/envs/myenv/bin" >> $GITHUB_PATH
+        python --version
         which blastn
         
     - name: Install pip dependencies
       run: |
+        source $(conda info --base)/etc/profile.d/conda.sh
+        conda activate test-env
         python -m pip install --upgrade pip
         pip install pytest
         pip install -e .
+        python --version
+        which blastn
         
     - name: Test with pytest
-      run: pytest --disable-warnings tests/test_oligo_specificity_filter.py
+      run: |
+        source $(conda info --base)/etc/profile.d/conda.sh
+        conda activate test-env
+        python --version
+        which blastn
+        pytest --disable-warnings tests/test_oligo_specificity_filter.py
     
