--- a/.github/workflows/test_2.yaml
+++ b/.github/workflows/test_2.yaml
@@ -29,7 +29,7 @@ jobs:
       max-parallel: 12
       matrix:
         os: [ubuntu-latest] #, macos-latest, windows-latest
-        python-version: ["3.10"] # "3.10", "3.11", "3.12"
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         
     steps:
     - name: Checkout Repository 
@@ -82,7 +82,6 @@ jobs:
       run: |
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate test-env
-        pytest --disable-warnings tests/test_oligo_specificity_filter.py
         python --version
         which blastn
-    
+        pytest --disable-warnings tests/test_oligo_specificity_filter.py
