--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,8 +28,8 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        os: [ubuntu-latest] #, macos-latest, windows-latest
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        os: [ubuntu-latest, macos-latest] #, macos-latest, windows-latest
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         
     steps:
     - name: Checkout Repository 
