--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        os: [ubuntu-latest, macos-latest] #, macos-latest, windows-latest
+        os: [ubuntu-latest, macos-latest, windows-latest] 
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         
     steps:
