--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         
-    - name: Setup Conda for Ubuntu and Mac
+    - name: Setup Conda (Ubuntu and Mac)
       if: matrix.os != 'windows-latest'
       uses: conda-incubator/setup-miniconda@v2
       with:
@@ -49,7 +49,21 @@ jobs:
         python-version: ${{ matrix.python-version }}
         activate-environment: "test-env"
 
-    - name: Setup Conda for Windows
+    - name: Update conda, add channels and install dependencies (Ubuntu and Mac)
+      if: matrix.os != 'windows-latest'
+      shell: bash
+      run: |
+        source $(conda info --base)/etc/profile.d/conda.sh
+        conda activate test-env
+        conda config --add channels bioconda
+        conda config --add channels conda-forge
+        conda update --all
+        conda install -n test-env -y "blast>=2.15.0"
+        conda install -n test-env -y "bedtools>=2.30"
+        conda install -n test-env -y "bowtie>=1.3.1"
+        conda install -n test-env -y "bowtie2>=2.5"
+
+    - name: Setup Conda (Windows)
       if: matrix.os == 'windows-latest'
       uses: s-weigand/setup-conda@v1
       with:
@@ -58,9 +72,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
         activate-environment: "test-env"
 
-    - name: Update conda, add channels and install dependencies
+    - name: Update conda, add channels and install dependencies (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: pwsh
       run: |
-        source $(conda info --base)/etc/profile.d/conda.sh
+        conda init powershell
         conda activate test-env
         conda config --add channels bioconda
         conda config --add channels conda-forge
