--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,30 +1,43 @@
 name: test
 
 on: 
+  schedule:
+    - cron: '0 0 1 * *'  # Runs at midnight UTC on the 1st day of each month
   push:
     branches:
       - main
     paths-ignore:
+      - '.gitignore'
+      - '.pre-commit-config.yaml'
+      - '.readthedocs.yaml'
+      - 'CONTRIBUTION.md'
+      - 'LICENSE'
+      - 'MANIFEST.in'
       - 'README.md'
-      - 'pyproject.toml'
+      - 'data/**'
       - 'docs/**'
       - 'tutorials/**'
   pull_request:
     branches:
       - main
     paths-ignore:
+      - '.gitignore'
+      - '.pre-commit-config.yaml'
+      - '.readthedocs.yaml'
+      - 'CONTRIBUTION.md'
+      - 'LICENSE'
+      - 'MANIFEST.in'
       - 'README.md'
-      - 'pyproject.toml'
+      - 'data/**'
       - 'docs/**'
       - 'tutorials/**'
-      - '.github/workflows/**'
   workflow_dispatch:
   workflow_call:
 
 jobs:
   build:
-  
     runs-on: ${{ matrix.os }}
+    
     strategy:
       max-parallel: 12
       matrix:
@@ -74,9 +87,9 @@ jobs:
 
     - name: Update conda, add channels and install dependencies (Windows)
       if: matrix.os == 'windows-latest'
-      shell: pwsh
+      shell: bash
       run: |
-        conda init powershell
+        eval "$(conda shell.bash hook)"
         conda activate test-env
         conda config --add channels bioconda
         conda config --add channels conda-forge
