--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest] 
+        os: [ubuntu-latest, macos-latest] 
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         
     steps:
@@ -67,30 +67,6 @@ jobs:
       shell: bash
       run: |
         source $(conda info --base)/etc/profile.d/conda.sh
-        conda activate test-env
-        conda config --add channels bioconda
-        conda config --add channels conda-forge
-        conda update --all
-        conda install -n test-env -y "blast>=2.15.0"
-        conda install -n test-env -y "bedtools>=2.30"
-        conda install -n test-env -y "bowtie>=1.3.1"
-        conda install -n test-env -y "bowtie2>=2.5"
-
-    - name: Setup Conda (Windows)
-      if: matrix.os == 'windows-latest'
-      uses: s-weigand/setup-conda@v1
-      with:
-        miniconda-version: "latest" 
-        update-conda: true
-        python-version: ${{ matrix.python-version }}
-        activate-environment: "test-env"
-
-    - name: Update conda, add channels and install dependencies (Windows)
-      if: matrix.os == 'windows-latest'
-      shell: bash
-      run: |
-        eval "$(conda shell.bash hook)"
-        conda create -y -n test-env python=${{ matrix.python-version }}
         conda activate test-env
         conda config --add channels bioconda
         conda config --add channels conda-forge
