--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        os: [ubuntu-latest, macos-latest] 
+        os: [ubuntu-latest, macos-14] 
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         
     steps:
