--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,7 +65,7 @@ jobs:
     - name: Check arm64
       run: |
         conda install -y python
-        python -c "import platform; assert platform.machine() == 'arm64', platform.machine()"
+        python -c "import platform; print(platform.machine())"
 
     - name: Update conda, add channels and install dependencies (Ubuntu and Mac)
       if: matrix.os != 'windows-latest'
