--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
     #    python-version: ${{ matrix.python-version }}
         
     - name: Setup Conda (Ubuntu & macos x64)
-      if: matrix.os != "macos-14"
+      if: matrix.os != 'macos-14'
       uses: conda-incubator/setup-miniconda@v2
       with:
         miniconda-version: "latest" 
@@ -63,7 +63,7 @@ jobs:
         activate-environment: "test-env"
     
     - name: Setup Conda (macos arm64)
-      if: matrix.os == "macos-14"
+      if: matrix.os == 'macos-14'
       uses: ./
       with:
         miniforge-version: latest
@@ -72,7 +72,7 @@ jobs:
         activate-environment: "test-env"
     
     - name: Check arm64 
-      if: matrix.os == "macos-14"
+      if: matrix.os == 'macos-14'
       run: |
         conda install -y python
         python -c "import platform; assert platform.machine() == 'arm64', platform.machine()"
