--- a/.github/workflows/test_ubuntu_x64.yml
+++ b/.github/workflows/test_ubuntu_x64.yml
@@ -41,44 +41,22 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        os: ["macos-14"] #"ubuntu-latest", "macos-latest"
+        os: ["ubuntu-latest"] 
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         
     steps:
     - name: Checkout Repository 
       uses: actions/checkout@v4
-
-    #- name: Setup Python
-    #  uses: actions/setup-python@v4
-    #  with:
-    #    python-version: ${{ matrix.python-version }}
         
-    - name: Setup Conda (Ubuntu & macos x64)
-      if: matrix.os != 'macos-14'
-      uses: conda-incubator/setup-miniconda@v3
+    - name: Setup Conda
+      uses: conda-incubator/setup-miniconda@v4
       with:
         miniconda-version: "latest" 
         auto-update-conda: true
         python-version: ${{ matrix.python-version }}
         activate-environment: "test-env"
-    
-    - name: Setup Conda (macos arm64)
-      if: matrix.os == 'macos-14'
-      uses: conda-incubator/setup-miniconda@v3
-      with:
-        installer-url: https://github.com/conda-forge/miniforge/releases/download/23.11.0-0/Mambaforge-23.11.0-0-MacOSX-arm64.sh
-        auto-update-conda: true
-        python-version: ${{ matrix.python-version }}
-        activate-environment: "test-env"
-    
-    - name: Check arm64 
-      if: matrix.os == 'macos-14'
-      run: |
-        conda install -y python
-        python -c "import platform; assert platform.machine() == 'arm64', platform.machine()"
 
-    - name: Update conda, add channels and install dependencies (Ubuntu and Mac)
-      if: matrix.os != 'windows-latest'
+    - name: Update conda, add channels and install dependencies
       shell: bash
       run: |
         source $(conda info --base)/etc/profile.d/conda.sh
@@ -103,6 +81,4 @@ jobs:
       run: |
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate test-env
-        python --version
-        which blastn
         pytest --disable-warnings
