--- a/.github/workflows/test_macos_x64.yml
+++ b/.github/workflows/test_macos_x64.yml
@@ -48,8 +48,8 @@ jobs:
     - name: Checkout Repository 
       uses: actions/checkout@v4
         
-    - name: Setup Conda
-      uses: conda-incubator/setup-miniconda@v3
+    - name: Setup Conda (Ubuntu and Mac)
+      uses: conda-incubator/setup-miniconda@v2
       with:
         miniconda-version: "latest" 
         auto-update-conda: true
