--- a/.github/workflows/test_macos_x64.yml
+++ b/.github/workflows/test_macos_x64.yml
@@ -41,7 +41,7 @@ jobs:
     strategy:
       max-parallel: 12
       matrix:
-        os: ["macos-latest"]
+        os: ["macos-13"]
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         
     steps:
@@ -49,7 +49,7 @@ jobs:
       uses: actions/checkout@v4
         
     - name: Setup Conda (Ubuntu and Mac)
-      uses: conda-incubator/setup-miniconda@v2
+      uses: conda-incubator/setup-miniconda@v3
       with:
         miniconda-version: "latest" 
         auto-update-conda: true
