--- a/.github/workflows/test_macos_arm64.yml
+++ b/.github/workflows/test_macos_arm64.yml
@@ -86,4 +86,4 @@ jobs:
       run: |
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate test-env
-        pytest --disable-warnings tests/test_pipelines.py
+        pytest --disable-warnings
